package targets;

public class class1 implements interface1 {
    public int x = 5;
    public final int y = 10;

    public static void main(String[] args) {
        int a = 5;
    }

    public int foo() {
        boolean b = true;
        return 0;
    }
}
