package targets;

public class class2 extends class1 {

}
