package targets;

public class class3 extends class2 {

}
